# logger

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  log.c  log.h
CMake/: FindLogger.cmake
